datas are going to add into df

--- a/Collecting-Data/wep-scrap.ipynb
+++ b/Collecting-Data/wep-scrap.ipynb
@@ -213,6 +213,9 @@
     "        if remaining_days % 10 == 0:\n",
     "            print(f\"{remaining_days} days left\")\n",
     "        \n",
+    "        if remaining_days % 5:\n",
+    "            df.to_csv(\"../Data/data_39.csv\", encoding='utf-8', index=False)\n",
+    "            \n",
     "        # news_boxes, o günün bütün haberlerini içeriyor\n",
     "        for box in soup.find_all('div', attrs={'class': 'box'}):\n",
     "            box_classes = box.get(\"class\")\n",
@@ -320,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"../Data/data_38.csv\", encoding='utf-8', index=False)"
+    "df.to_csv(\"../Data/data_39.csv\", encoding='utf-8', index=False)"
    ]
   },
   {
