calling data updated

--- a/Preprocess-Data/preprocessing.ipynb
+++ b/Preprocess-Data/preprocessing.ipynb
@@ -20,21 +20,10 @@
    "source": [
     "df_list = []\n",
     "\n",
-    "data_path = '../Data/news-Data/'\n",
+    "data_path = '../Data/'\n",
     "\n",
-    "for path in os.listdir(data_path):\n",
-    "    if path.split(\".\")[1] == 'csv' and path != 'nanContent.csv':\n",
-    "        df = pd.read_csv(data_path + path)\n",
-    "        df_list.append(df)\n",
-    "\n",
-    "data = pd.concat(\n",
-    "    df_list, ignore_index=False\n",
-    ")\n",
-    "df = data.copy()\n",
-    "df = df.drop(columns=['Unnamed: 0'])\n",
-    "\n",
-    "nan_df = df[df['Content'].isna()]\n",
-    "nan_df.to_csv('../Data/nanContent.csv', index=False)"
+    "data = pd.read_csv(data_path + \"news-data.csv\")\n",
+    "df = data.copy()"
    ]
   },
   {
