collecting data updated

--- a/Collecting-Data/wep-scrap.ipynb
+++ b/Collecting-Data/wep-scrap.ipynb
@@ -24,31 +24,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total news :  212366\n",
-      "total days : 2459\n"
+      "total news :  180462\n",
+      "total days : 2670\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
+    "path = '../Data/news-data.csv'\n",
     "\n",
-    "past_dates = []\n",
-    "\n",
-    "for path in os.listdir('../Data/'):\n",
-    "    if path.split('.')[1] == \"csv\" and path != \"nanContent.csv\":\n",
-    "        past_dates += [\n",
-    "            '/20' + date.split('-')[0].split('.')[::-1][0] + \n",
-    "                '/' +date.split('-')[0].split('.')[::-1][1] + \n",
-    "                    '/' + date.split('-')[0].split('.')[::-1][2]\n",
-    "                        for date in pd.read_csv(\"../Data/\" + path)['Day_month_year_hour']\n",
-    "                ]\n",
+    "past_dates = [\n",
+    "    '/20' + date.split('-')[0].split('.')[::-1][0] + \n",
+    "        '/' +date.split('-')[0].split('.')[::-1][1] + \n",
+    "            '/' + date.split('-')[0].split('.')[::-1][2]\n",
+    "                for date in pd.read_csv(path)['Day_month_year_hour']\n",
+    "        ]\n",
     "\n",
     "print(\"total news : \", len(past_dates))\n",
     "past_dates = list(set(past_dates))\n",
