--- a/Model/main.ipynb
+++ b/Model/main.ipynb
@@ -2,10 +2,143 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys \n",
+    "\n",
+    "sys.path.append('../Preprocess-Data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "import os \n",
+    "\n",
+    "from category_reducer import category_reducer\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "\n",
+    "import warnings \n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = '../Data/news-data-with-imgs.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(data_path)\n",
+    "\n",
+    "df = data.copy()\n",
+    "\n",
+    "df = category_reducer(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100 entries, 0 to 99\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   Title                100 non-null    object\n",
+      " 1   Content              100 non-null    object\n",
+      " 2   Content_url          100 non-null    object\n",
+      " 3   News_type            100 non-null    object\n",
+      " 4   Day_month_year_hour  100 non-null    object\n",
+      " 5   Img_url              100 non-null    object\n",
+      " 6   img_path             100 non-null    object\n",
+      "dtypes: object(7)\n",
+      "memory usage: 5.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PreprocessImg:\n",
+    "    def __init__(self):\n",
+    "        self.images_path = \"../Data/imgs/\"\n",
+    "\n",
+    "    def load_img(self):\n",
+    "        loaded_imgs = []\n",
+    "        for img in os.listdir(self.images_path):\n",
+    "            loaded_imgs.append(image.load_img(os.path.join(self.images_path, img)))\n",
+    "        return loaded_imgs\n",
+    "\n",
+    "    def get_size_info(self, loaded_imgs):\n",
+    "        img_weights = []\n",
+    "        img_heights = []\n",
+    "        for size in loaded_imgs:\n",
+    "            img_weights.append(size.size[0])\n",
+    "            img_heights.append(size.size[1])\n",
+    "        \n",
+    "        weights_mean = np.mean(img_weights)\n",
+    "        weights_std = np.std(img_weights)\n",
+    "        \n",
+    "        heights_mean = np.mean(img_heights)\n",
+    "        heights_std = np.std(img_heights)\n",
+    "\n",
+    "        return weights_mean, weights_std, heights_mean, heights_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean width: 1029.85\n",
+      "Standard deviation of widths: 355.39463628479257\n",
+      "Mean height: 709.22\n",
+      "Standard deviation of heights: 297.7434660911974\n"
+     ]
+    }
+   ],
+   "source": [
+    "preprocessor = PreprocessImg()\n",
+    "\n",
+    "loaded_imgs = preprocessor.load_img()\n",
+    "\n",
+    "widths_mean, widths_std, heights_mean, heights_std = preprocessor.get_size_info(loaded_imgs)\n",
+    "print(\"Mean width:\", widths_mean)\n",
+    "print(\"Standard deviation of widths:\", widths_std)\n",
+    "print(\"Mean height:\", heights_mean)\n",
+    "print(\"Standard deviation of heights:\", heights_std)"
+   ]
   },
   {
    "cell_type": "code",
