descriptions added to preprocess class

--- a/Model/main.ipynb
+++ b/Model/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,29 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '../Data/news-data-with-imgs.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(data_path)\n",
+    "data_path = '../Data/news-data-with-imgs.csv'\n",
     "\n",
+    "data = pd.read_csv(data_path)\n",
     "df = data.copy()\n",
     "\n",
+    "# Reducing the number of categories \n",
     "df = category_reducer(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,21 +75,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PreprocessImg:\n",
+    "\n",
+    "    '''\n",
+    "    # Class to preprocess the images and get the size information of the images.\n",
+    "    '''\n",
     "    def __init__(self):\n",
     "        self.images_path = \"../Data/imgs/\"\n",
     "\n",
     "    def load_img(self):\n",
+    "        '''\n",
+    "        # Load the images from the directory\n",
+    "\n",
+    "        Returns:\n",
+    "            - loaded_imgs: List of loaded images\n",
+    "        '''\n",
     "        loaded_imgs = []\n",
     "        for img in os.listdir(self.images_path):\n",
     "            loaded_imgs.append(image.load_img(os.path.join(self.images_path, img)))\n",
     "        return loaded_imgs\n",
     "\n",
     "    def get_size_info(self, loaded_imgs):\n",
+    "        '''\n",
+    "        # Get the size information of the images \n",
+    "\n",
+    "        Args:\n",
+    "            - loaded_imgs: list of loaded images\n",
+    "\n",
+    "        Returns:\n",
+    "            - weights_mean: Mean of the weights of the images\n",
+    "            - weights_std: Standard deviation of the weights of the images\n",
+    "            - heights_mean: Mean of the heights of the images\n",
+    "            - heights_std: Standard deviation of the heights of the images\n",
+    "        '''\n",
     "        img_weights = []\n",
     "        img_heights = []\n",
     "        for size in loaded_imgs:\n",
@@ -114,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -139,6 +154,20 @@
     "print(\"Mean height:\", heights_mean)\n",
     "print(\"Standard deviation of heights:\", heights_std)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
