preprocessor updated content preprocessor added

--- a/Model/main.ipynb
+++ b/Model/main.ipynb
@@ -23,6 +23,8 @@
     "\n",
     "from category_reducer import category_reducer\n",
     "from tensorflow.keras.preprocessing import image\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "\n",
     "import warnings \n",
     "warnings.filterwarnings(\"ignore\")"
@@ -30,22 +32,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '../Data/news-data-with-imgs.csv'\n",
+    "def load_data():\n",
+    "    '''\n",
+    "    # Load the data from the csv file and reduce the number of categories\n",
+    "    '''\n",
+    "    data_path = \"../Data/news-data-with-imgs.csv\"\n",
+    "    data = pd.read_csv(data_path)\n",
+    "    df = data.copy()\n",
     "\n",
-    "data = pd.read_csv(data_path)\n",
-    "df = data.copy()\n",
+    "    # Reducing the number of categories \n",
+    "    df = category_reducer(df)\n",
     "\n",
-    "# Reducing the number of categories \n",
-    "df = category_reducer(df)"
+    "    print(df.info())\n",
+    "\n",
+    "    df = df[['Content', 'Title', 'img_path']]\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,28 +75,28 @@
       " 5   Img_url              100 non-null    object\n",
       " 6   img_path             100 non-null    object\n",
       "dtypes: object(7)\n",
-      "memory usage: 5.6+ KB\n"
+      "memory usage: 5.6+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
+    "df = load_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PreprocessImg:\n",
-    "\n",
     "    '''\n",
     "    # Class to preprocess the images and get the size information of the images.\n",
     "    '''\n",
     "    def __init__(self):\n",
     "        self.images_path = \"../Data/imgs/\"\n",
-    "\n",
+    "        \n",
     "    def load_img(self):\n",
     "        '''\n",
     "        # Load the images from the directory\n",
@@ -129,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,11 +154,11 @@
     }
    ],
    "source": [
-    "preprocessor = PreprocessImg()\n",
+    "img_preprocessor = PreprocessImg()\n",
     "\n",
-    "loaded_imgs = preprocessor.load_img()\n",
+    "loaded_imgs = img_preprocessor.load_img()\n",
     "\n",
-    "widths_mean, widths_std, heights_mean, heights_std = preprocessor.get_size_info(loaded_imgs)\n",
+    "widths_mean, widths_std, heights_mean, heights_std = img_preprocessor.get_size_info(loaded_imgs)\n",
     "print(\"Mean width:\", widths_mean)\n",
     "print(\"Standard deviation of widths:\", widths_std)\n",
     "print(\"Mean height:\", heights_mean)\n",
@@ -157,17 +167,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PreprocessText(Tokenizer):\n",
+    "    def __init__(self, data):\n",
+    "        Tokenizer.__init__(self)\n",
+    "\n",
+    "        self.fit_on_texts(data)\n",
+    "        self.tokens = self.texts_to_sequences(data)\n",
+    "\n",
+    "        self.numbers_of_words = [len(token) for token in self.tokens]\n",
+    "        self.max_tokens = int(np.mean(self.numbers_of_words) + 2 * np.std(self.numbers_of_words))\n",
+    "\n",
+    "        self.padded_tokens = pad_sequences(self.tokens, maxlen=self.max_tokens, padding='post', truncating='post')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max tokens: 13\n",
+      "Shape of padded tokens: (100, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "title_preprocessor = PreprocessText(df['Title'])\n",
+    "\n",
+    "title_padded_tokens = title_preprocessor.padded_tokens\n",
+    "title_max_tokens = title_preprocessor.max_tokens\n",
+    "\n",
+    "print(\"Max tokens:\", title_max_tokens)\n",
+    "print('Shape of padded tokens:', title_padded_tokens.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max tokens: 406\n",
+      "Shape of padded tokens: (100, 406)\n"
+     ]
+    }
+   ],
+   "source": [
+    "content_preprocessor = PreprocessText(df['Content'])\n",
+    "\n",
+    "content_padded_tokens = content_preprocessor.padded_tokens\n",
+    "content_max_tokens = content_preprocessor.max_tokens\n",
+    "\n",
+    "print(\"Max tokens:\", content_max_tokens)\n",
+    "print('Shape of padded tokens:', content_padded_tokens.shape)"
+   ]
   },
   {
    "cell_type": "code",
