--- a/Model/main.ipynb
+++ b/Model/main.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -115,40 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 100 entries, 0 to 99\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column               Non-Null Count  Dtype \n",
-      "---  ------               --------------  ----- \n",
-      " 0   Title                100 non-null    object\n",
-      " 1   Content              100 non-null    object\n",
-      " 2   Content_url          100 non-null    object\n",
-      " 3   News_type            100 non-null    object\n",
-      " 4   Day_month_year_hour  100 non-null    object\n",
-      " 5   Img_url              100 non-null    object\n",
-      " 6   img_path             100 non-null    object\n",
-      "dtypes: object(7)\n",
-      "memory usage: 5.6+ KB\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = load_data()\n",
-    "\n",
-    "df = df.iloc[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,18 +264,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max tokens:  11\n",
-      "Mean tokens:  9\n",
-      "Standard deviation of tokens:  1\n",
-      "Vocabulary Size:  40\n",
-      "Shape of padded tokens:  (5, 11)\n"
+      "Max tokens:  26\n",
+      "Mean tokens:  8\n",
+      "Standard deviation of tokens:  3\n",
+      "Vocabulary Size:  563\n",
+      "Shape of padded tokens:  (100, 26)\n"
      ]
     }
    ],
@@ -327,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,50 +313,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_1\"\n",
-      "__________________________________________________________________________________________________\n",
-      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      " input_5 (InputLayer)           [(None, 224, 224, 3  0           []                               \n",
-      "                                )]                                                                \n",
-      "                                                                                                  \n",
-      " mobilenetv2_1.00_224 (Function  (None, 7, 7, 1280)  2257984     ['input_5[0][0]']                \n",
-      " al)                                                                                              \n",
-      "                                                                                                  \n",
-      " global_average_pooling2d_1 (Gl  (None, 1280)        0           ['mobilenetv2_1.00_224[0][0]']   \n",
-      " obalAveragePooling2D)                                                                            \n",
-      "                                                                                                  \n",
-      " input_6 (InputLayer)           [(None, None)]       0           []                               \n",
-      "                                                                                                  \n",
-      " dense_3 (Dense)                (None, 256)          327936      ['global_average_pooling2d_1[0][0\n",
-      "                                                                 ]']                              \n",
-      "                                                                                                  \n",
-      " embedding_1 (Embedding)        (None, None, 300)    12000       ['input_6[0][0]']                \n",
-      "                                                                                                  \n",
-      " dense_4 (Dense)                (None, 32)           8224        ['dense_3[0][0]']                \n",
-      "                                                                                                  \n",
-      " lstm_1 (LSTM)                  (None, 256)          570368      ['embedding_1[0][0]']            \n",
-      "                                                                                                  \n",
-      " concatenate_1 (Concatenate)    (None, 288)          0           ['dense_4[0][0]',                \n",
-      "                                                                  'lstm_1[0][0]']                 \n",
-      "                                                                                                  \n",
-      " dense_5 (Dense)                (None, 40)           11560       ['concatenate_1[0][0]']          \n",
-      "                                                                                                  \n",
-      "==================================================================================================\n",
-      "Total params: 3,188,072\n",
-      "Trainable params: 930,088\n",
-      "Non-trainable params: 2,257,984\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Encoder\n",
     "base_model = MobileNetV2(weights='imagenet', include_top=False, input_shape=(224, 224, 3))\n",
@@ -414,6 +340,131 @@
     "model.compile(loss='categorical_crossentropy', optimizer='adam')\n",
     "\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) for plot_model/model_to_dot to work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_model(model, show_shapes=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "40/40 [==============================] - 90s 2s/step - loss: 3.1339\n",
+      "Epoch 2/5\n",
+      "40/40 [==============================] - 80s 2s/step - loss: 2.0125\n",
+      "Epoch 3/5\n",
+      "40/40 [==============================] - 83s 2s/step - loss: 1.8130\n",
+      "Epoch 4/5\n",
+      "40/40 [==============================] - 86s 2s/step - loss: 1.7100\n",
+      "Epoch 5/5\n",
+      "40/40 [==============================] - 86s 2s/step - loss: 1.5894\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x11ca853f640>"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es = EarlyStopping(monitor='loss', patience=5, verbose=1)\n",
+    "\n",
+    "model.fit([X_images, X_texts], y_texts,\n",
+    "          epochs=5, batch_size=64,\n",
+    "          callbacks=[es]\n",
+    "  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text(test_image):\n",
+    "  initial_caption = '<start>'\n",
+    "  max_caption_length = 20\n",
+    "\n",
+    "  initial_caption_seq = tokenizer.texts_to_sequences([initial_caption])[0]\n",
+    "  initial_caption_seq = pad_sequences([initial_caption_seq], maxlen=max_tokens)\n",
+    "\n",
+    "  final_caption = []\n",
+    "\n",
+    "  while True:\n",
+    "      predictions = model.predict([np.expand_dims(test_image, axis=0), initial_caption_seq])\n",
+    "\n",
+    "      predicted_word_index = np.argmax(predictions)\n",
+    "\n",
+    "      predicted_word = tokenizer.index_word[predicted_word_index]\n",
+    "\n",
+    "      if predicted_word == '<end>':\n",
+    "          break\n",
+    "\n",
+    "      final_caption.append(predicted_word)\n",
+    "\n",
+    "      initial_caption_seq = pad_sequences([initial_caption_seq[0].tolist() + [predicted_word_index]], maxlen=max_tokens)\n",
+    "\n",
+    "  final_caption = ' '.join(final_caption)\n",
+    "\n",
+    "  plt.imshow(test_image)\n",
+    "  plt.axis(\"off\")\n",
+    "  plt.show()\n",
+    "  print()\n",
+    "  print(final_caption)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 71ms/step\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[69], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgenerate_text\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_images\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[68], line 15\u001b[0m, in \u001b[0;36mgenerate_text\u001b[1;34m(test_image)\u001b[0m\n\u001b[0;32m     11\u001b[0m predictions \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict([np\u001b[38;5;241m.\u001b[39mexpand_dims(test_image, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m), initial_caption_seq])\n\u001b[0;32m     13\u001b[0m predicted_word_index \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(predictions)\n\u001b[1;32m---> 15\u001b[0m predicted_word \u001b[38;5;241m=\u001b[39m \u001b[43mtokenizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex_word\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpredicted_word_index\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m predicted_word \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m<end>\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "generate_text(X_images[0])"
    ]
   },
   {
